--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,6 +27,7 @@
                 </h1>
                 <p>每週真誠推薦</p>
             </div>
+            <a class="coach_index" href="course/G2_instructor_dashboard" style="text-align:center;justify-content: center" >教練主頁入口</a>
         </div>
 
 
