--- a/src/main/resources/templates/front-end/course/coach_dashboard.html
+++ b/src/main/resources/templates/front-end/course/coach_dashboard.html
@@ -2205,7 +2205,7 @@
                             </div>
                             <div class="rbt-tutor-information-right">
                                 <div class="tutor-btn">
-                                    <a class="rbt-btn btn-md hover-icon-reverse" href="course/G2-create-course">
+                                    <a class="rbt-btn btn-md hover-icon-reverse" th:href="@{create_course}">
                                         <span class="icon-reverse-wrapper">
                         <span class="btn-text">創建課程</span>
                                         <span class="btn-icon"><i class="feather-arrow-right"></i></span>
@@ -2232,10 +2232,10 @@
                                             </div>
                                             <nav class="mainmenu-nav">
                                                 <ul class="dashboard-mainmenu rbt-default-sidebar-list">
-                                                    <li><a href="G2-instructor-dashboard.html"><i class="feather-home"></i><span>教練主頁</span></a></li>
-                                                    <li><a href="G2-instructor-profile.html"><i class="feather-user"></i><span>教練個人資料</span></a></li>
-                                                    <li><a href="instructor-course.html"><i class="feather-monitor"></i><span>課程管理</span></a></li>
-                                                    <li><a href="G2-instructor-announcements.html"><i class="feather-volume-2"></i><span>課程公告</span></a></li>
+                                                    <li><a th:href="@{coach_dashboard}"><i class="feather-home"></i><span>教練主頁</span></a></li>
+                                                    <li><a th:href="@{coach_profile}"><i class="feather-user"></i><span>教練個人資料</span></a></li>
+                                                    <li><a href="G2-instructor-course.html"><i class="feather-monitor"></i><span>課程管理</span></a></li>
+                                                    <li><a th:href="@{course_announcement}"><i class="feather-volume-2"></i><span>課程公告</span></a></li>
                                                     <li><a href="instructor-wishlist.html"><i class="feather-bookmark"></i><span>廣告投放</span></a></li>
                                                     <li><a href="instructor-order-history.html"><i class="feather-shopping-bag"></i><span>金流設定</span></a></li>
                                                     <li><a href="instructor-reviews.html"><i class="feather-star"></i><span>Reviews</span></a></li>                                                        
@@ -2266,109 +2266,153 @@
                             <div class="rbt-dashboard-content bg-color-white rbt-shadow-box mb--60">
                                 <div class="content">
                                     <div class="section-title">
-                                        <h4 class="rbt-title-style-3">發布公告</h4>
+                                        <h4 class="rbt-title-style-3">教練主頁</h4>
                                     </div>
-                                    
-                                    <div class="accordion-body card-body">
-                                        <!-- Start Course Field Wrapper  -->
-                                        <div class="course-field mb--20">
-                                            <h6>課程名稱</h6>
-                                            <div class="rbt-modern-select bg-transparent height-45 w-100 mb--10">
-                                            	<select id="crId">
-                                            		<option th:each="courseVO : ${courseListData}" th:value="${courseVO.crId}" th:text="${courseVO.crTitle}">
-                                            		</option>
-                                            	</select>
-                                                <!-- <select class="w-100" data-live-search="true" id="crClass" title="選擇課程分類 ex. 有氧,健身" data-size="6" data-actions-box="true" >
-                                                    <option>有氧</option>
-                                                    <option>健身</option>
-                                                    <option>減脂</option>
-                                                    <option>重量訓練</option>
-                                                    <option>皮拉提斯</option>
-                                                    <option>其他</option>
-                                                    
-                                                </select> -->
+                                    <div class="row g-5">
+
+                                        <!-- Start Single Card  -->
+                                        <div class="col-lg-4 col-md-4 col-sm-6 col-12">
+                                            <div class="rbt-counterup variation-01 rbt-hover-03 rbt-border-dashed bg-primary-opacity">
+                                                <div class="inner">
+                                                    <div class="rbt-round-icon bg-primary-opacity">
+                                                        <i class="feather-book-open"></i>
+                                                    </div>
+                                                    <div class="content">
+                                                        <h3 class="counter without-icon color-primary"><span class="odometer" data-count="30">00</span>
+                                                        </h3>
+                                                        <span class="rbt-title-style-2 d-block" style="font-size: 20px ;">已上架課程</span>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
+                                        <!-- End Single Card  -->
 
-                                        <div class="rbt-course-field-wrapper rbt-default-form">
-                                            <div class="course-field mb--15">
-                                                <label for="field-1" >公告標題</label>
-                                                <input id="anTitle" type="text"  placeholder="課程最新公告">
-                                                <small class="d-block mt_dec--5"><i class="feather-info">標題20個字以內</i></small>
+                                        <!-- Start Single Card  -->
+                                        <div class="col-lg-4 col-md-4 col-sm-6 col-12">
+                                            <div class="rbt-counterup variation-01 rbt-hover-03 rbt-border-dashed bg-secondary-opacity">
+                                                <div class="inner">
+                                                    <div class="rbt-round-icon bg-secondary-opacity">
+                                                        <i class="feather-monitor"></i>
+                                                    </div>
+                                                    <div class="content">
+                                                        <h3 class="counter without-icon color-secondary"><span class="odometer" data-count="10">00</span>
+                                                        </h3>
+                                                        <span class="rbt-title-style-2 d-block" style="font-size: 20px ;">訂閱人數</span>
+                                                    </div>
+                                                </div>
                                             </div>
-                                            
-                                            
-                                            
-
-                                            <div class="course-field mb--15">
-                                                <label for="aboutCourse">公告內容</label>
-                                                <textarea id="anContent" rows="10" ></textarea>
-                                                <small class="d-block mt_dec--5"><i class="feather-info"></i> 允许使用 HTML 或纯文本，不支持表情符號。</small>
-                                            </div>
-                                            
-
-                                            
-
 
                                         </div>
-                                        <!-- End Course Field Wrapper  -->
-                                        <div class="col-lg-8">
-                                            <a class="rbt-btn btn-gradient hover-icon-reverse w-100 text-center" href="#" id="createAnnButton">
-                                                <span class="icon-reverse-wrapper">
-                                                    <span class="btn-text">發布公告</span>
-                                                <span class="btn-icon"><i class="feather-arrow-right"></i></span>
-                                                <span class="btn-icon"><i class="feather-arrow-right"></i></span>
-                                                </span>
-                                            </a>
-                                        </div>
-                                        <script>
-                                
-                                document.getElementById("createAnnButton").addEventListener("click", function() {
-        
-        var data = {
-        	crId : $('#crId').val(),
-        	anTitle : $('#anTitle').val(),
-        	anContent : $('#anContent').val(),
-	        };
-       const formData = new FormData();
-        for (const key in data) {
-            formData.append(key, data[key]);
-        }
-        $.post('http://localhost:8081/0205_Maven_SpringBootMVC_Thymeleaf_Ver5_SpringData-Jpa/ann/insert', data)
-        .done(function(responseData) {
-			window.alert("成功創建課程課程公告");
-			window.location.href = 'select_page'
-        }, 'json'
-        )
-        .fail(function(error) {
-            console.error('Error:', error);
-        });
-        // 发送异步请求到后端保存数据
-        /* fetch('http://localhost:8081/THA105G2/front-end/course/course.do', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/x-www-form-urlencoded' // Change content type to form data
-                },
-                body: new URLSearchParams(data).toString() // Convert data to URL-encoded form data
-            })
-            .then(response => response.json()) // 处理后端返回的JSON响应
-            .then(responseData => {
-                // 在控制台打印后端返回的数据
-                console.log(responseData);
+                                        <!-- End Single Card  -->
 
-                // 这里可以根据需要处理后端返回的数据
-            })
-            .catch(error => console.error('Error:', error)); */
-    });
-                                
-                            </script>
+                                        <!-- Start Single Card  -->
+                                        <div class="col-lg-4 col-md-4 col-sm-6 col-12">
+                                            <div class="rbt-counterup variation-01 rbt-hover-03 rbt-border-dashed bg-violet-opacity">
+                                                <div class="inner">
+                                                    <div class="rbt-round-icon bg-violet-opacity">
+                                                        <i class="feather-award"></i>
+                                                    </div>
+                                                    <div class="content">
+                                                        <h3 class="counter without-icon color-violet"><span class="odometer" data-count="7">00</span>
+                                                        </h3>
+                                                        <span class="rbt-title-style-2 d-block" style="font-size: 20px ;">學生人數</span>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <!-- End Single Card  -->
+
                                         
-                                    </div>
 
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="rbt-dashboard-content bg-color-white rbt-shadow-box mb--60">
+                                <div class="content">
+                                    <div class="row">
+                                        <div class="col-lg-12">
+                                            <div class="section-title">
+                                                <h4 class="rbt-title-style-3">我的課程</h4>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row gy-5">
+                                        <div class="col-lg-12">
+                                            <div class="rbt-dashboard-table table-responsive">
+                                                <table id="dynamic-table" class="rbt-table table table-borderless">
+                                                    <thead>
+                                                        <tr>
+                                                            <th>Course Name</th>
+                                                            <th>Enrolled</th>
+                                                            <th>Rating</th>
+                                                        </tr>
+                                                    </thead>
+                                                    <!-- <tbody>
+                                                        <tr>
+                                                            <th><a href="#">Accounting</a></th>
+                                                            <td>50</td>
+                                                            <td>
+                                                                <div class="rating">
+                                                                    <i class="fas fa-star"></i>
+                                                                    <i class="fas fa-star"></i>
+                                                                    <i class="fas fa-star"></i>
+                                                                    <i class="fas fa-star"></i>
+                                                                    <i class="fas fa-star"></i>
+                                                                </div>
+                                                            </td>
+                                                        </tr>
+                                                        <tr>
+                                                            <th><a href="#">Marketing</a></th>
+                                                            <td>40</td>
+                                                            <td>
+                                                                <div class="rating">
+                                                                    <i class="fas fa-star"></i>
+                                                                    <i class="fas fa-star"></i>
+                                                                    <i class="fas fa-star"></i>
+                                                                    <i class="fas fa-star"></i>
+                                                                    <i class="fas fa-star"></i>
+                                                                </div>
+                                                            </td>
+                                                        </tr>
+                                                        <tr>
+                                                            <th><a href="#">Web Design</a></th>
+                                                            <td>75</td>
+                                                            <td>
+                                                                <div class="rating">
+                                                                    <i class="fas fa-star"></i>
+                                                                    <i class="fas fa-star"></i>
+                                                                    <i class="fas fa-star"></i>
+                                                                    <i class="fas fa-star"></i>
+                                                                    <i class="fas fa-star"></i>
+                                                                </div>
+                                                            </td>
+                                                        </tr>
+                                                        <tr>
+                                                            <th><a href="#">Graphic</a></th>
+                                                            <td>20</td>
+                                                            <td>
+                                                                <div class="rating">
+                                                                    <i class="fas fa-star"></i>
+                                                                    <i class="fas fa-star"></i>
+                                                                    <i class="off fas fa-star"></i>
+                                                                    <i class="off fas fa-star"></i>
+                                                                    <i class="off fas fa-star"></i>
+                                                                </div>
+                                                            </td>
+                                                        </tr>
+                                                    </tbody> -->
+                                                    <tbody></tbody>
+                                                </table>
+                                            </div>
+
+                                            <div class="load-more-btn text-center">
+                                                <a class="rbt-btn-link" href="instructor-course.html">瀏覽全部課程<i class="feather-arrow-right"></i></a>
+                                            </div>
+                                        </div>
+                                    </div>
 
                                 </div>
                             </div>
-                           
                         </div>
                     </div>
                 </div>
