--- a/src/main/resources/templates/front-end/user/user_login.html
+++ b/src/main/resources/templates/front-end/user/user_login.html
@@ -11,6 +11,11 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <!-- Thymeleaf dependencies -->
+    <script src="https://www.thymeleaf.org/thymeleaf.js"></script>
+    <!-- Eugen追加 -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" th:src="@{/images/favicon.png}">
 
