--- a/src/main/resources/static/css/student_dashboard_2.css
+++ b/src/main/resources/static/css/student_dashboard_2.css
@@ -189,3 +189,46 @@ position: relative;
 .member-post-socialpost p{
     margin-left: 10px;
 }
+
+
+.edit{
+    cursor:pointer;
+}
+
+.post-content-edit{
+    display: none;
+}
+
+.post-content-edit.show{
+    display: block;
+}
+
+.post-content.hide{
+    display: none;
+}
+
+.edit-social-post-button{
+    display: flex;
+}
+
+.edit-social-post-button  .mt--15{
+    margin-right: 20px;
+}
+
+.edit-socialpost{
+    width: 120px;
+    height: 45px;
+    margin-right: 10px;
+    border-radius: 20px;
+    border:none;
+    color: var(--color-white);
+    background-size: 300% 100%;
+    background-image: linear-gradient(to right, var(--color-primary), var(--color-secondary), var(--color-secondary), var(--color-primary));
+    transition: all .4s ease-in-out;
+}
+
+.edit-socialpost:hover{
+    background-color: inherit;
+    background-position: 102% 0;
+    
+}
