--- a/src/main/resources/templates/front-end/user/test-only/test1.html
+++ b/src/main/resources/templates/front-end/user/test-only/test1.html
@@ -25,7 +25,7 @@
     <script>
         function fetchPhoto() {
             const userId = document.getElementById('get_u_id').value;
-            fetch('/user_api/user_headshot', {
+            fetch('/user_api/user_headshot_test', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
