andy update moodVO.moodId

--- a/src/main/resources/templates/front-end/course/coach_settings.html
+++ b/src/main/resources/templates/front-end/course/coach_settings.html
@@ -2331,7 +2331,7 @@
                                                 <div class="col-lg-6 col-md-6 col-sm-6 col-12">
                                                     <div class="rbt-form-group">
                                                         <label for="mood">心情狀態</label>
-                                                        <input id="mood" type="text" th:value="*{moodId}">
+                                                        <input id="mood" type="text" th:value="*{moodVO.moodId}">
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-6 col-md-6 col-sm-6 col-12">
