--- a/src/main/resources/templates/front-end/user/user_login.html
+++ b/src/main/resources/templates/front-end/user/user_login.html
@@ -1075,7 +1075,7 @@
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="rbt-lost-password text-end">
-                                        <a class="rbt-btn-link" href="#">忘記密碼?</a>
+                                        <a class="rbt-btn-link" th:href="@{/user/user_forget_password/}">忘記密碼?</a>
                                     </div>
                                 </div>
                             </div>
@@ -1091,7 +1091,7 @@
                             </div>
                         </form>
                         <div class="margin"><span class="margin-right-10px">還沒有建立新帳號?</span><a
-                            th:href="@{/user/user_login/}">註冊</a> </div>
+                            th:href="@{/user/user_register/}">註冊</a> </div>
                     </div>
                 </div>
 
