--- a/src/main/resources/templates/front-end/user/user_register.html
+++ b/src/main/resources/templates/front-end/user/user_register.html
@@ -798,7 +798,7 @@
                 inputs.forEach(input => input.value = "");
               }else if (data === "0") {
                 // 註冊成功，重定向到登入頁面
-                window.location.href = "/user/user_login";
+                window.location.href = "/user/user_login_after_register";
               }
             })
             .catch(error => console.error("Error:", error));
