--- a/src/main/resources/templates/front-end/course/course_announce.html
+++ b/src/main/resources/templates/front-end/course/course_announce.html
@@ -2190,7 +2190,7 @@
                                     <img th:src="'data:image/jpeg;base64,' + ${uHeadshot}" alt="Instructor">
                                 </div>
                                 <div class="tutor-content">
-                                    <h5 class="title">John Due</h5>
+                                <h5 class="title" th:text="${uName}"></h5>
                                     <div class="rbt-review">
                                         <div class="rating">
                                             <i class="fas fa-star"></i>
@@ -2250,7 +2250,7 @@
 
                                             <nav class="mainmenu-nav">
                                                 <ul class="dashboard-mainmenu rbt-default-sidebar-list">
-                                                    <li><a href="instructor-settings.html"><i class="feather-settings"></i><span>設定</span></a></li>
+                                                    <li><a th:href="@{coach_settings}"><i class="feather-settings"></i><span>資料設定</span></a></li>
                                                     <li><a href="index.html"><i class="feather-log-out"></i><span>登出</span></a></li>
                                                 </ul>
                                             </nav>
