--- a/src/main/resources/templates/front-end/course/create_course.html
+++ b/src/main/resources/templates/front-end/course/create_course.html
@@ -2042,7 +2042,7 @@
                                                                 <label class="d-flex" for="createinputfile" title="No File Choosen">
                                                                     <i class="feather-upload"></i>
                                                                     <span class="text-center">選擇上傳</span>
-                                                                </label>
+                                                                </label> -->
                                                             </div>
                                                         </div>
                                                     </div>
@@ -2218,10 +2218,6 @@
                                 document.getElementById("createCourseButton").addEventListener("click", function() {
         
         var data = {
-            /* crTitle: crTitle,
-            crSubtitle: crSubtitle,
-          	action:'insert'
-            // 添加更多元素... */
 	        uId : 10001 ,
 	        crClass : $('#crClass').val(),
 	        crState : 1,
@@ -2418,6 +2414,57 @@
     <script th:src="@{/assets/js/vendor/plyr.js}"></script>
     <!-- Main JS -->
     <script th:src="@{/assets/js/main.js}"></script>
+    <!-- JavaScript part -->
+<script type="text/javascript">
+    //清除提示信息
+    function hideContent(d) {
+         document.getElementById(d).style.display = "none";
+    }
+    
+    //照片上傳-預覽用
+    var filereader_support = typeof FileReader != 'undefined';
+    if (!filereader_support) {
+        alert("No FileReader support");
+    }
+    acceptedTypes = {
+            'image/png' : true,
+            'image/jpeg' : true,
+            'image/gif' : true
+    };
+    function previewImage() {
+        var upfile1 = document.getElementById("crCover");
+        upfile1.addEventListener("change", function(event) {
+            var files = event.target.files || event.dataTransfer.files;
+            for (var i = 0; i < files.length; i++) {
+                previewfile(files[i])
+            }
+        }, false);
+    }
+    function previewfile(file) {
+        if (filereader_support === true && acceptedTypes[file.type] === true) {
+            var reader = new FileReader();
+            reader.onload = function(event) {
+                var image = new Image();
+                image.src = event.target.result;
+                image.width = 100;
+                image.height = 75;
+                image.border = 2;
+                if (blob_holder.hasChildNodes()) {
+                    blob_holder.removeChild(blob_holder.childNodes[0]);
+                }
+                blob_holder.appendChild(image);
+            };
+            reader.readAsDataURL(file);
+            document.getElementById('submit').disabled = false;
+        } else {
+            blob_holder.innerHTML = "<div  style='text-align: left;'>" + "● filename: " + file.name
+                    + "<br>" + "● ContentTyp: " + file.type
+                    + "<br>" + "● size: " + file.size + "bytes"
+                    + "<br>" + "● 上傳ContentType限制: <b> <font color=red>image/png、image/jpeg、image/gif </font></b></div>";
+            document.getElementById('submit').disabled = true;
+        }
+    }
+    </script>
 </body>
 
 </html>
